# FreeCAD-DesignProof

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Init.py  InitGui.py  README.md  package.xml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: __init__.py  dependency_analyzer.py  parameter_detector.py  recompute_tester.py  report_generator.py  variation_engine.py
freecad/DesignProof/: __init__.py  init.py  init_gui.py  resources.py
freecad/DesignProof/core/: recompute_tester.py  variation_engine.py
freecad/DesignProof/ui/: __init__.py  analysis_dialog.py  commands.py  focused_panel.py  metrics_dialog.py  param_panel.py
ui/: __init__.py  analysis_dialog.py  commands.py  focused_panel.py  metrics_dialog.py  param_panel.py
