<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>DesignProof</name>
  <description>Proof-test your parametric CAD models by systematically varying dimensions and measuring regeneration success rates.</description>
  <version>0.1.0</version>
  <maintainer email="info@unai3d.com">Unai-Pz-de-A</maintainer>
  <license file="LICENSE">LGPL-2.1</license>
  <url type="repository">https://github.com/Unai-Pz-de-A/FreeCAD-DesignProof</url>
  <url type="bugtracker">https://github.com/Unai-Pz-de-A/FreeCAD-DesignProof/issues</url>

  <depend>FreeCAD</depend>

  <content>
    <workbench>
      <classname>DesignProofWorkbench</classname>
      <icon>Resources/icons/workbench.svg</icon>
    </workbench>
  </content>
</package>
